# protocell

./: .gitignore  .ocamlformat  .ocamlformat-ignore  .travis.yml  CHANGES.md  Makefile  README.md  dune-project  index.html  protocell.opam
example/auto_import/: auto_import.ml  auto_import.proto  dune
example/import/: dune  import.ml  import.proto  ingredient.proto
example/simple/: dune  simple.ml  simple.proto
example/type_zoo/: dune  type_zoo.ml  type_zoo.proto
protocell/: index.html
protocell/Protocell_google/: index.html
protocell/Protocell_google/Google_protobuf_any_pc/: index.html
protocell/Protocell_google/Google_protobuf_api_pc/: index.html
protocell/Protocell_google/Google_protobuf_compiler_plugin_pc/: index.html
protocell/Protocell_google/Google_protobuf_descriptor_pc/: index.html
protocell/Protocell_google/Google_protobuf_duration_pc/: index.html
protocell/Protocell_google/Google_protobuf_empty_pc/: index.html
protocell/Protocell_google/Google_protobuf_field_mask_pc/: index.html
protocell/Protocell_google/Google_protobuf_source_context_pc/: index.html
protocell/Protocell_google/Google_protobuf_struct_pc/: index.html
protocell/Protocell_google/Google_protobuf_timestamp_pc/: index.html
protocell/Protocell_google/Google_protobuf_type_pc/: index.html
protocell/Protocell_google/Google_protobuf_wrappers_pc/: index.html
protocell/Protocell_google__Google_protobuf_any_pc/: index.html
protocell/Protocell_google__Google_protobuf_any_pc/Any/: index.html
protocell/Protocell_google__Google_protobuf_api_pc/: index.html
protocell/Protocell_google__Google_protobuf_api_pc/Api/: index.html
protocell/Protocell_google__Google_protobuf_api_pc/Method'/: index.html
protocell/Protocell_google__Google_protobuf_api_pc/Mixin/: index.html
protocell/Protocell_google__Google_protobuf_compiler_plugin_pc/: index.html
protocell/Protocell_google__Google_protobuf_compiler_plugin_pc/Code_generator_request/: index.html
protocell/Protocell_google__Google_protobuf_compiler_plugin_pc/Code_generator_response/: index.html
protocell/Protocell_google__Google_protobuf_compiler_plugin_pc/Version/: index.html
protocell/Protocell_google__Google_protobuf_descriptor_pc/: index.html
protocell/Protocell_google__Google_protobuf_descriptor_pc/Descriptor_proto/: index.html
protocell/Protocell_google__Google_protobuf_descriptor_pc/Enum_descriptor_proto/: index.html
protocell/Protocell_google__Google_protobuf_descriptor_pc/Enum_options/: index.html
protocell/Protocell_google__Google_protobuf_descriptor_pc/Enum_value_descriptor_proto/: index.html
protocell/Protocell_google__Google_protobuf_descriptor_pc/Enum_value_options/: index.html
protocell/Protocell_google__Google_protobuf_descriptor_pc/Extension_range_options/: index.html
protocell/Protocell_google__Google_protobuf_descriptor_pc/Field_descriptor_proto/: index.html
protocell/Protocell_google__Google_protobuf_descriptor_pc/Field_options/: index.html
protocell/Protocell_google__Google_protobuf_descriptor_pc/File_descriptor_proto/: index.html
protocell/Protocell_google__Google_protobuf_descriptor_pc/File_descriptor_set/: index.html
protocell/Protocell_google__Google_protobuf_descriptor_pc/File_options/: index.html
protocell/Protocell_google__Google_protobuf_descriptor_pc/Method_options/: index.html
protocell/Protocell_google__Google_protobuf_duration_pc/: index.html
protocell/Protocell_google__Google_protobuf_empty_pc/: index.html
protocell/Protocell_google__Google_protobuf_field_mask_pc/: index.html
protocell/Protocell_google__Google_protobuf_source_context_pc/: index.html
protocell/Protocell_google__Google_protobuf_struct_pc/: index.html
protocell/Protocell_google__Google_protobuf_timestamp_pc/: index.html
protocell/Protocell_google__Google_protobuf_type_pc/: index.html
protocell/Protocell_google__Google_protobuf_wrappers_pc/: index.html
protocell/Runtime/: index.html
protocell/Runtime__/: index.html
protocell/Runtime__Binary_format/: index.html
protocell/Runtime__Byte_input/: index.html
protocell/Runtime__Byte_output/: index.html
protocell/Runtime__Field_value/: index.html
protocell/Runtime__Text_format/: index.html
protocell/Runtime__Types/: index.html
src/generator/: dune  generator.ml
src/google/: dune  google_protobuf_any_pc.ml  google_protobuf_api_pc.ml  google_protobuf_compiler_plugin_pc.ml  google_protobuf_descriptor_pc.ml  google_protobuf_duration_pc.ml  google_protobuf_empty_pc.ml  google_protobuf_field_mask_pc.ml  google_protobuf_source_context_pc.ml  google_protobuf_struct_pc.ml  google_protobuf_timestamp_pc.ml  google_protobuf_type_pc.ml  google_protobuf_wrappers_pc.ml
src/protoc_interface/: descriptor_pb.ml  descriptor_pb.mli  descriptor_pp.ml  descriptor_types.ml  descriptor_types.mli  dune  google_protobuf_compiler_plugin_pc.ml  google_protobuf_descriptor_pc.ml  parameter.ml  plugin_pb.ml  plugin_pb.mli  plugin_pp.mli  plugin_types.mli  protoc_interface.ml
src/protocell/: dune  protocell.ml
src/protocell_google/: google_protobuf_api_pc.ml  google_protobuf_compiler_plugin_pc.ml  google_protobuf_descriptor_pc.ml  google_protobuf_duration_pc.ml  google_protobuf_struct_pc.ml  google_protobuf_timestamp_pc.ml  google_protobuf_type_pc.ml  google_protobuf_wrappers_pc.ml
src/runtime/: binary_format.ml  binary_format.mli  byte_input.ml  byte_input.mli  byte_output.ml  byte_output.mli  byte_stream.ml  byte_stream.mli  dune  field_value.ml  field_value.mli  field_variable.ml  field_variable.mli  protoc_dump_reader.ml  reader.ml  reader.mli  runtime.ml  text_format.ml  text_format.mli  types.ml  wire_format.ml  wire_format.mli
src/shared/: generated_code.ml  protobuf.ml
src/shared_types/: dune  generated_code.ml  protobuf.ml
src/spec/: descriptor_pb.ml  descriptor_pp.ml  descriptor_pp.mli  descriptor_types.ml  descriptor_types.mli  dune  plugin_pp.ml  plugin_types.ml  spec.ml
test/: dune  floats.ml  floats.proto  integers.ml  integers.proto  map_int.ml  map_int.proto  sanity.ml  sanity.proto  test.ml  test.proto  types.ml  types.proto  utils.ml
(+134 files in other folders)
