opam-version: "2.0"
homepage: "https://github.com/martinslota/protocell/"
dev-repo: "git+https://github.com/martinslota/protocell.git"
bug-reports: "https://github.com/martinslota/protocell/issues"
doc: "https://martinslota.github.io/protocell/"
author: "Martin Slota <martin.slota@keemail.me>"
license: "Apache-2.0"
maintainer: "Martin Slota <martin.slota@keemail.me>"
build: [["dune" "build" "-p" name "-j" jobs]]
run-test: [["dune" "runtest" "-p" name "-j" jobs]]
depexts: [
  ["libprotobuf-dev" "protobuf-compiler"] {os-distribution = "debian"}
  ["libprotobuf-devel" "protobuf-compiler"] {os-distribution = "mageia"}
  ["libprotobuf-dev" "protobuf-compiler"] {os-distribution = "ubuntu"}
  ["protobuf-devel" "protobuf-compiler"] {os-distribution = "centos"}
  ["protobuf-devel" "protobuf-compiler"] {os-distribution = "fedora"}
  ["protobuf-devel" "protobuf-compiler"] {os-distribution = "rhel"}
  ["protobuf"] {os-distribution = "alpine"}
  ["protobuf"] {os-distribution = "arch"}
  ["protobuf-devel"] {os-family = "suse"}
  ["protobuf"] {os = "freebsd"}
  ["protobuf"] {os = "macos" & os-distribution = "homebrew"}
]
depends: [
  "alcotest" {with-test}
  "base" {>= "v0.10"}
  "core" {with-test & >= "v0.10"}
  "dune" {>= "1.11"}
  "ocaml" {>= "4.04.1"}
  "ocplib-endian"
  "ppx_deriving"
  "stdio" {>= "0.11.0"}
]
synopsis: "A Protobuf plugin for OCaml"
description: """
Conjures up convenient OCaml types and serialization functions based on
Protocol Buffer (protobuf) definition files.
"""
