opam-version: "2.0"
homepage: "https://github.com/martinslota/protocell/"
dev-repo: "git+https://github.com/martinslota/protocell.git"
bug-reports: "https://github.com/martinslota/protocell/issues"
doc: "https://martinslota.github.io/protocell/"
author: "Martin Slota <martin.slota@keemail.me>"
license: "Apache-2.0"
maintainer: "Martin Slota <martin.slota@keemail.me>"
build: [["dune" "build" "-p" name "-j" jobs]]
run-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "alcotest" {with-test}
  "base" {>= "v0.10"}
  "core" {with-test & >= "v0.10"}
  "conf-protoc" {>= "1.0.0"}
  "dune" {>= "1.11"}
  "ocaml" {>= "4.04.1"}
  "ocplib-endian"
  "ppx_deriving"
  "stdio" {>= "0.11.0"}
]
synopsis: "A Protobuf plugin for OCaml"
description: """
Conjures up convenient OCaml types and serialization functions based on
Protocol Buffer (protobuf) definition files.
"""
