(executable
 (name test)
 (libraries alcotest core runtime)
 (preprocess
  (pps ppx_deriving_yojson ppx_deriving.eq ppx_deriving.show)))

(rule
 (targets sanity_pc.ml)
 (deps
  (:plugin ../src/protocell/protocell.exe)
  (:proto sanity.proto))
 (action
  (run protoc --plugin=protoc-gen-ocaml=%{plugin} --ocaml_out=. %{proto})))

(alias
 (name runtest)
 (deps
  (:test test.exe)
  sanity.proto)
 (action
  (run %{test} --color=always)))
