(executable
 (name test)
 (libraries alcotest core runtime)
 (preprocess
  (pps ppx_deriving.eq ppx_deriving.show)))

(env
 (_
  (env-vars
   (WITH_DERIVERS eq,show))))

(rule
 (targets sanity_pc.ml integers_pc.ml)
 (deps
  (:plugin ../src/protocell/protocell.exe)
  (:proto sanity.proto integers.proto))
 (action
  (run protoc --plugin=protoc-gen-ocaml=%{plugin} --ocaml_out=. %{proto})))

(alias
 (name runtest)
 (deps
  (:test test.exe)
  sanity.proto)
 (action
  (run %{test} --color=always)))
