(executable
 (name auto_import)
 (libraries protocell.google protocell.runtime stdio)
 (preprocess
  (pps ppx_deriving.eq ppx_deriving.show)))

(env
 (_
  (env-vars
   (WITH_DERIVERS eq,show))))

(rule
 (targets auto_import_pc.ml)
 (deps
  (:plugin %{ocaml_bin}/protocell)
  (:proto auto_import.proto))
 (action
  (run protoc --plugin=protoc-gen-ocaml=%{plugin} --ocaml_out=. %{proto})))

(alias
 (name examples)
 (deps auto_import.exe))
