(executable
 (name type_zoo)
 (libraries protocell.runtime stdio)
 (preprocess
  (pps ppx_deriving.eq ppx_deriving.show)))

(env
 (_
  (env-vars
   (WITH_DERIVERS eq,show))))

(rule
 (targets type_zoo_pc.ml)
 (deps
  (:plugin %{ocaml_bin}/protocell)
  (:proto type_zoo.proto))
 (action
  (run protoc --plugin=protoc-gen-ocaml=%{plugin} --ocaml_out=. %{proto})))

(alias
 (name examples)
 (deps type_zoo.exe))
